--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Josh Mandell Asteroid Project</title>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Replace this with something interesting...</h1>
+			<h1>My Unfinished Asteroids Project</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame/AsteroidsGame.pde AsteroidsGame/Mover.pde AsteroidsGame/Spaceship.pde AsteroidsGame/Star.pde ">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer - replace with a helpful message on how to play your game.
+		    Here we have an asteroid game with the ship from starfox, you can't really shoot or do anything but move.
 	    </footer>
 	</body>
 </html>
